--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
       "ext-pdo": "*",
       "ext-json": "*",
         "tuupola/slim-basic-auth": "^3.3",
-        "tuupola/slim-jwt-auth": "^3.6",
-      "ext-oauth": "*"
+        "tuupola/slim-jwt-auth": "^3.6"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.0"
